# rdf-mcp

./: .flake8  .gitignore  MCP_AGENT_README.md  NOTES.md  README.md  README_ORGANIZATION.md  agent.py  aggregate_metrics.json  aggregate_metrics.py  aggregate_metrics_report.txt  analyze_failures.py  analyze_tool_usage.py  benchmark.py  brick.py  example_mcp_usage.py  fastmcp_config.json  get_completion.py  kgqa.py  kgqa_agent.py  mcp_agent.py  message_history.json  metrics.py  pyproject.toml  react_agent.py  s223.py  simple-agent-just-query.csv  sparql-and-building.csv  sparql_agent_run_20260119_134107.csv  sparql_agent_run_20260119_135357.csv  sparql_agent_run_20260119_140640.csv  sparql_agent_run_20260119_142813.csv  sparql_agent_run_20260124_094955.csv  sparql_agent_run_20260124_095212.csv  test-building.ttl  test-logger.csv  test-queries.json  test.py  test_kgqa_agent.py  test_kgqa_agent_simple.py  test_kgqa_mcp_funcs.py  (+5 more)
agents/: agent.py  kgqa-simple.py  kgqa.py  kgqa_simple.py  react_agent.py
archive/: sparql_agent_run_20260119_133821.csv  sparql_agent_run_20260119_133938.csv  sparql_agent_run_20260119_134742.csv  sparql_agent_run_20260119_135553.csv  sparql_agent_run_20260119_135956.csv  sparql_agent_run_20260119_141238.csv  sparql_agent_run_20260119_144031.csv  sparql_agent_run_20260119_145439.csv
performance/: ReAct(w100) (1).csv  ReAct(w5000) (1).csv
results/: all-tools-active.csv  failure_analysis_20260119_183358.csv  message_history.json  sample_data.csv  sparql_agent_run_20260121_093712.csv  sparql_agent_run_20260121_094037.csv  sparql_agent_run_20260121_094559.csv  sparql_agent_run_20260121_105757.csv  sparql_agent_run_20260121_110031.csv  sparql_agent_run_20260121_111251.csv  sparql_agent_run_20260121_111540.csv  sparql_agent_run_20260121_122751.csv  sparql_agent_run_20260121_122851.csv  sparql_agent_run_20260121_122916.csv  sparql_agent_run_20260121_131931.csv  sparql_agent_run_20260121_132143.csv  sparql_agent_run_20260121_132707.csv  (+43 more)
scripts/: NOTES.md  (+10 more)
(+12 files in other folders)
