[project]
name = "rdf-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "mcp[cli]>=1.6.0",
    "numpy",
    "oxrdflib>=0.4.0",
    "pandas",
    "pydantic-ai>=0.1.3",
    "python-dotenv",
    "pyparsing",
    "pyyaml",
    "rdflib>=7.1.4",
    "sparqlwrapper",
]

#[tool.uv.sources]
#ollama-mcp-client = { path = "ollama-mcp-client" }
[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
]
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
