[project]
name = "rdf-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "mcp[cli]>=1.6.0",
    "oxrdflib>=0.4.0",
    "pandas>=3.0.0",
    "pydantic-ai>=0.1.3",
    "pyyaml>=6.0.2",
    "rdflib>=7.1.4",
    "sentence-transformers>=5.2.0",
]

#[tool.uv.sources]
#ollama-mcp-client = { path = "ollama-mcp-client" }
[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
]
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
